--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-    <meta http-equiv="refresh" content="0; url=https://movileapps8-amalnaria7332847936.codeanyapp.com/besgn/">
+    <meta http-equiv="refresh" content="0; url=https://movileapps8-amalnaria7332847936.codeanyapp.com/besgn/d41d8cd98f00b20/">
 
 </head>
 
